...
            android:textSize="22dp"
            android:textAlignment="center"
            android:background="@drawable/border_shadows"
            android:layout_marginBottom="50dp" />

        <Button
            android:id="@+id/button_validate"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:backgroundTint="#C62828"
            android:text="@string/valider_item"
...
